--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "browser-sync . --port 8080 --no-notify --files '*.html,app,.git-hash' --browser 'google chrome'",
+    "start": "browser-sync . --port 8080 --no-notify --files '*.html,app,.git-hash' --browser 'google chrome' --no-ghost-mode",
     "start-old": "live-server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-version": "git rev-parse HEAD | cut -c 1-7 > git-hash",
